--- a/index.html
+++ b/index.html
@@ -14,21 +14,39 @@
 
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+    <div class="container">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse " id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+
+                <li class="nav-item active">
+                    <a class="nav-link btn btn-sm btn-success text-white" onclick="printContent('#print_doc')" id="print" href="#">Print or Download<span class="sr-only">(current)</span></a>
+                </li>
+
+
+            </ul>
+        </div>
+    </div>
+</nav>
 <section class="w-100">
     <div class="col-sm-12">
         <div class="row py-4">
-            <div class="col-sm-12 col-md-12 col-lg-10 p-5 mx-auto bg-whitee receipt_wrapper">
+            <div id="print_doc" class="col-sm-12 col-md-12 col-lg-10 p-5 mx-auto bg-whitee receipt_wrapper">
                 <div class="row" style="padding: 0 14px;">
                     <div class="col-sm-12 row mx-auto header_bottom_boder pb-4">
-                        <div class="col-sm-12 col-md-4">
+                        <div class="col-sm-12 col-md-4 pt-3">
                             <div class="form-group w-100 img_wrapper" style="">
                                 <label id="img_label" data-toggle="tooltip" data-placement="right" title="Click to add image" for="vmimg"><i class="far fa-plus-square"></i></label>
                                 <input required id="vmimg" name="image" type="file" onchange="readURL(this);" />
-                                <img style="" class="blah" id="image" src="static/No-Image-Available.png" alt="your image" />
+                                <img  data-toggle="tooltip" data-placement="right" title="Click center toggle to add image" style="" class="blah" id="image" src="static/No-Image-Available.png" alt="your image" />
                                 <small id="emailHelp" style="font-size: 22px;" class="form-text text-muted"></small>
                             </div>
                         </div>
-                        <div class="col-sm-12 col-md-6 px-0  ">
+                        <div class="col-sm-12 col-md-6 px-0 py-0  ">
                             <label for="bs_name" class="no-label"></label>
                             <input type="text" class="form-control no-border input_title" id="bs_name" placeholder="[ Business Name ]">
 
@@ -36,23 +54,23 @@
                             <input type="text" class="form-control no-border" id="bs_address" placeholder="[ Business Address 1]">
 
                             <label for="bs_City" class="no-label"></label>
-                            <input type="text" class="form-control no-border" id="bs_City" placeholder="[ Business City ]">
+                            <input type="text" class="form-control no-border" id="bs_City" placeholder="[ City ]">
 
                             <label for="bs_State" class="no-label"></label>
-                            <input type="text" class="form-control no-border" id="bs_State" placeholder="[ Business State ]">
+                            <input type="text" class="form-control no-border" id="bs_State" placeholder="[ State ]">
 
                             <label for="bs_Postal Code" class="no-label"></label>
-                            <input type="text" class="form-control no-border" id="bs_Postal Code" placeholder="[ Business Postal Code ]">
+                            <input type="text" class="form-control no-border" id="bs_Postal Code" placeholder="[ Postal Code ]">
 
                             <label for="bs_phone" class="no-label"></label>
-                            <input type="text" class="form-control no-border" id="bs_phone" placeholder="[ Business Phone Number ]">
+                            <input type="text" class="form-control no-border" id="bs_phone" placeholder="[ Phone Number ]">
 
                             <label for="bs_email" class="no-label"></label>
-                            <input type="text" class="form-control no-border" id="bs_email" placeholder="[ Business Email Address ]">
+                            <input type="text" class="form-control no-border" id="bs_email" placeholder="[ Email Address ]">
 
 
                         </div>
-                        <div class="col-sm-12 col-md-2">
+                        <div class="col-sm-12 col-md-2 pt-3">
                             <h3 class="text-muted text-right">Receipt</h3>
                         </div>
                     </div>
@@ -81,7 +99,7 @@
                             </div>
                         </div>
                         <div id="clone_me"  class="col-sm-12 col-md-6 ">
-                            <div class="row ">
+                            <div class="row cloned">
                                 <div class="col-sm-6 text-right">
                                     <label for="bs_invoice_no" class="no-label"></label>
                                     <input type="text" class="form-control no-border input_title_sm text-right " id="bs_invoice_no" placeholder="Invoice Number: ">
@@ -91,7 +109,7 @@
                                     <input type="text" class="form-control no-border text-right" id="bs_invoice_no_text" placeholder="Invoice Number: ">
                                 </div>
                             </div>
-                            <div class="row">
+                            <div class="row cloned">
                                 <div class="col-sm-6 text-right">
                                     <label for="bs_datw" class="no-label"></label>
                                     <input type="text" class="form-control no-border input_title_sm text-right" id="bs_datw" placeholder="Date: ">
@@ -102,7 +120,6 @@
                                 </div>
                             </div>
                             <i id="invoice_add" class="fas fa-plus-square text-success" data-toggle="tooltip" data-placement="left" title="Add another row"></i>
-                            <i style="display:none;" id="invoice_delete" class="fas fa-trash text-danger " data-toggle="tooltip" data-placement="right" title="Delete last row"></i>
                         </div>
                     </div>
                     <div class="col-sm-12 row mx-auto py-5">
@@ -131,7 +148,7 @@
                                         <input value="100" type="number" class="form-control no-border" id="bs_unit_price" placeholder="20">
                                     </th>
                                     <th scope="row">
-                                        <span>Ksh </span><span> 100.00</span>
+                                        <span>Ksh </span><span class="ammounts_total"></span>
                                     </th>
                                     <th scope="row">
 
@@ -147,8 +164,8 @@
                                         <label for="bs_Total" class="no-label"></label>
                                         <input type="text" class="form-control no-border input_title_sm text-bold-placehoder" id="bs_Total" placeholder="Total: ">
                                     </td>
-                                    <td colspan="2">
-                                        <span>Ksh</span><span>10000</span>
+                                    <td colspan="2" class="text-bold-custom">
+                                        <span>Ksh </span><span id="total_txt"></span>
                                     </td>
                                 </tr>
                                 <tr>
@@ -156,8 +173,12 @@
                                         <label for="bs_paid_amount" class="no-label"></label>
                                         <input type="text" class="form-control no-border input_title_sm text-bold-placehoder" id="bs_paid_amount" placeholder="Paid Amount: ">
                                     </td>
-                                    <td colspan="2">
-                                        Ksh 120000
+                                    <td colspan="2" cclass="text-bold-custom">
+                                        <div class="d-flex align-items-center">
+
+                                            <label for="paid_amount_input" class="no-label"></label>
+                                            Ksh <input  value="0" type="number" class="form-control no-border ml-2" id="paid_amount_input" placeholder="Amount">
+                                        </div>
                                     </td>
                                 </tr>
                                 <tr>
@@ -165,7 +186,7 @@
                                         <label for="bs_paid_balance" class="no-label"></label>
                                         <input type="text" class="form-control no-border input_title_sm text-bold-placehoder" id="bs_paid_balance" placeholder="Balance Due: ">
                                     </td>
-                                    <td colspan="2">
+                                    <td colspan="2" class="text-bold-custom">
                                         Ksh 120000
                                     </td>
                                 </tr>
@@ -184,6 +205,7 @@
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.min.js"></script>
 <script src="static/main.js" ></script>
 </body>
 </html>
