--- a/index.html
+++ b/index.html
@@ -10,24 +10,28 @@
     <link rel="stylesheet" href="static/main.css">
     <script src="https://kit.fontawesome.com/16d33ecbbb.js" crossorigin="anonymous"></script>
 
-    <title>Hello, world!</title>
+    <title>Receipt Generator</title>
 
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
     <div class="container">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">Receipt Generator</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse " id="navbarNav">
             <ul class="navbar-nav ml-auto">
-
-                <li class="nav-item active">
-                    <a class="nav-link btn btn-sm btn-success text-white" onclick="printContent('#print_doc')" id="print" href="#">Print or Download<span class="sr-only">(current)</span></a>
+                <li class="nav-item px-1">
+                    <a type="button"  data-toggle="modal" data-target="#exampleModal" class="nav-link btn btn-sm btn-info text-white"  href="#">Add Tax </a>
+                </li>
+                <li class="nav-item px-1">
+                    <a type="button"  data-toggle="modal" data-target="#exampleModal2" class="nav-link btn btn-sm btn-warning text-white"  href="#">Add Discount </a>
                 </li>
 
-
+                <li class="nav-item px-1">
+                    <a class="nav-link btn btn-sm btn-success text-white" onclick="printContent('#print_doc')" id="print" href="#">Print or Download<span class="sr-only">(current)</span></a>
+                </li>
             </ul>
         </div>
     </div>
@@ -130,7 +134,7 @@
                                 <th scope="col">Quantity</th>
                                 <th scope="col">Unit Price</th>
                                 <th scope="col">Amount</th>
-                                <th scope="col">Delete</th>
+                                <th scope="col"></th>
                             </tr>
                             </thead>
                             <tbody>
@@ -196,6 +200,72 @@
                     </div>
                 </div>
             </div>
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-lg modal-dialog-centered">
+                    <div class="modal-content">
+                        <div class="modal-header" style="padding: 2px 8px;">
+                            <h5 class="modal-title" id="exampleModalLabel">Add Tax</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body" >
+                            <div class="col-sm-12">
+                                <div style="padding: 4px 14px; display: none;" id="alert_dangerr" class="alert alert-danger" role="alert">
+                                    Please fill the form
+                                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div style="padding: 4px 14px; display: none;" id="alert_success" class="alert alert-success" role="alert">
+                                    Tax Added
+                                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-sm-6">
+                                    <div class="form-group">
+                                        <label for="tax_name">Name</label>
+                                        <input type="text" class="form-control" id="tax_name" placeholder="Name">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="tax_input">Tax</label>
+                                        <input type="number" class="form-control" id="tax_input" placeholder="amount">
+                                    </div>
+                                </div>
+                                <div class="col-sm-6">
+                                    <table class="table">
+                                        <thead>
+                                        <tr>
+                                            <th scope="col">#</th>
+                                            <th scope="col">Name</th>
+                                            <th scope="col">Value</th>
+                                            <th scope="col">Action</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody id="tax_tbody">
+
+
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+
+                            <div class="row px-4">
+
+                                <button type="button" id="tax_form_submit" class="btn btn-sm btn-primary mr-3">Save </button>
+                                <div style="display: none" id="spinner" class="spinner-border text-success" role="status">
+                                    <span class="sr-only">Loading...</span>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </section>
@@ -206,6 +276,7 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.min.js"></script>
+<script src="static/db.js" ></script>
 <script src="static/main.js" ></script>
 </body>
 </html>
