--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
     <title>Receipt Generator</title>
 
+<!--    <script src="static/ck-editor.js" ></script>-->
+    <script src="https://cdn.ckeditor.com/ckeditor5/19.1.1/inline/ckeditor.js"></script>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
@@ -30,27 +32,32 @@
                 </li>
 
                 <li class="nav-item px-1">
-                    <a class="nav-link btn btn-sm btn-success text-white" onclick="printContent('#print_doc')" id="print" href="#">Print or Download<span class="sr-only">(current)</span></a>
+                    <a class="nav-link btn btn-sm btn-success text-white" onclick="generatePDF();" id="print" href="#">Download<span class="sr-only">(current)</span></a>
                 </li>
             </ul>
         </div>
     </div>
 </nav>
+
 <section class="w-100">
+
+
+    <div id="toolbar-container"></div>
     <div class="col-sm-12">
         <div class="row py-4">
-            <div id="print_doc" class="col-sm-12 col-md-12 col-lg-10 p-5 mx-auto bg-whitee receipt_wrapper">
+
+            <div id="print_doc" class="col-sm-12 col-md-12 col-lg-9 p-3 mx-auto bg-whitee receipt_wrapper">
                 <div class="row" style="padding: 0 14px;">
                     <div class="col-sm-12 row mx-auto header_bottom_boder pb-4">
-                        <div class="col-sm-12 col-md-4 pt-3">
-                            <div class="form-group w-100 img_wrapper" style="">
-                                <label id="img_label" data-toggle="tooltip" data-placement="right" title="Click to add image" for="vmimg"><i class="far fa-plus-square"></i></label>
+                        <div class="col-sm-12 col-md-3 pt-3">
+                            <div class="form-group img_wrapper" style="">
+                                <label id="img_label" data-toggle="tooltip" data-placement="right" title="Click to add image" for="vmimg"><i class="far fa-plus-square print_hide"></i></label>
                                 <input required id="vmimg" name="image" type="file" onchange="readURL(this);" />
                                 <img  data-toggle="tooltip" data-placement="right" title="Click center toggle to add image" style="" class="blah" id="image" src="static/No-Image-Available.png" alt="your image" />
                                 <small id="emailHelp" style="font-size: 22px;" class="form-text text-muted"></small>
                             </div>
                         </div>
-                        <div class="col-sm-12 col-md-6 px-0 py-0  ">
+                        <div class="col-sm-12 col-md-5 px-0 py-0  ">
                             <label for="bs_name" class="no-label"></label>
                             <input type="text" class="form-control no-border input_title" id="bs_name" placeholder="[ Business Name ]">
 
@@ -74,8 +81,11 @@
 
 
                         </div>
-                        <div class="col-sm-12 col-md-2 pt-3">
-                            <h3 class="text-muted text-right">Receipt</h3>
+                        <div class="col-sm-12 col-md-4 ">
+
+                                <label for="editor_title_t" class="no-label"></label>
+                                <input value="Receipt" type="text" class="form-control no-border input_title text-right" id="editor_title_t"  placeholder="Receipt">
+
                         </div>
                     </div>
                     <div class="col-sm-12 row mx-auto py-5">
@@ -120,10 +130,10 @@
                                 </div>
                                 <div class="col-sm-6 text-right">
                                     <label for="bs_date_no_text" class="no-label"></label>
-                                    <input value="" type="date" class="form-control no-border text-right" id="bs_date_no_text" >
+                                    <input value="" type="text" class="form-control no-border text-right" id="bs_date_no_text"  placeholder="">
                                 </div>
                             </div>
-                            <i id="invoice_add" class="fas fa-plus-square text-success" data-toggle="tooltip" data-placement="left" title="Add another row"></i>
+                            <i id="invoice_add" class="fas fa-plus-square text-success print_hide" data-toggle="tooltip" data-placement="left" title="Add another row"></i>
                         </div>
                     </div>
                     <div class="col-sm-12 row mx-auto py-5">
@@ -162,7 +172,7 @@
 
                                 <tr>
                                     <td colspan="2" rowspan="3">
-                                        <button id="addrow" class="btn btn-success btn-sm" data-toggle="tooltip" data-placement="left" title="Add another row"><i class="fas fa-plus-square" ></i> Add row</button>
+                                        <button id="addrow" class="btn btn-success btn-sm print_hide" data-toggle="tooltip" data-placement="left" title="Add another row"><i class="fas fa-plus-square" ></i> Add row</button>
                                     </td>
                                     <td class="py-0">
                                         <label for="bs_Total" class="no-label"></label>
@@ -198,9 +208,14 @@
                             </tbody>
                         </table>
                     </div>
+                    <div class="col-sm-12 row mx-auto py-5">
+                        <label for="validationTextarea" class="text-center w-100">Notes / Terms</label>
+                        <textarea rows="20" class="form-control no-border w-100 text-center" id="validationTextarea" placeholder="Notes / Terms" required></textarea>
+                    </div>
                 </div>
             </div>
             <!-- Modal -->
+
             <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog modal-lg modal-dialog-centered">
                     <div class="modal-content">
@@ -266,17 +281,85 @@
                     </div>
                 </div>
             </div>
+            <div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel2" aria-hidden="true">
+                <div class="modal-dialog modal-lg modal-dialog-centered">
+                    <div class="modal-content">
+                        <div class="modal-header" style="padding: 2px 8px;">
+                            <h5 class="modal-title" id="exampleModalLabel2">Add discount</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body" >
+                            <div class="col-sm-12">
+                                <div style="padding: 4px 14px; display: none;" id="alert_dangerr2" class="alert alert-danger" role="alert">
+                                    Please fill the form
+                                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div style="padding: 4px 14px; display: none;" id="alert_success2" class="alert alert-success" role="alert">
+                                    Discount Added
+                                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-sm-6">
+                                    <div class="form-group">
+                                        <label for="discount_name">Name</label>
+                                        <input type="text" class="form-control" id="discount_name" placeholder="Name">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="discount_value">Discount</label>
+                                        <input type="number" class="form-control" id="discount_value" placeholder="value">
+                                    </div>
+                                </div>
+                                <div class="col-sm-6">
+                                    <table class="table">
+                                        <thead>
+                                        <tr>
+                                            <th scope="col">#</th>
+                                            <th scope="col">Name</th>
+                                            <th scope="col">Value</th>
+                                            <th scope="col">Action</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody id="discount_tbody">
+
+
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+
+                            <div class="row px-4">
+
+                                <button type="button" id="discount_form_submit" class="btn btn-sm btn-primary mr-3">Save </button>
+                                <div style="display: none" id="discount_spinner" class="spinner-border text-success" role="status">
+                                    <span class="sr-only">Loading...</span>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </section>
 
 <!-- Optional JavaScript -->
+
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.min.js"></script>
+<script src="static/html2pdf.js"></script>
 <script src="static/db.js" ></script>
+
 <script src="static/main.js" ></script>
+
 </body>
 </html>
