--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
 </nav>
 
 <section class="w-100">
-
     <div class="col-sm-12">
         <div class="row py-4">
 
-            <div id="print_doc" class="col-sm-12 col-md-12 col-lg-9 p-3 mx-auto bg-whitee receipt_wrapper">
+            <div id="print_doc" class="col-sm-12 col-md-12 col-lg-8 col-lg-6 p-3 mx-auto bg-whitee receipt_wrapper">
                 <div class="row" style="padding: 0 14px;">
+
                     <div class="col-sm-12 row mx-auto header_bottom_boder pb-4">
                         <div class="col-sm-12 col-md-4 pt-3">
                             <div class="form-group img_wrapper" style="">
@@ -55,7 +55,7 @@
                                 <small id="emailHelp" style="font-size: 22px;" class="form-text text-muted"></small>
                             </div>
                         </div>
-                        <div class="col-sm-12 col-md-4 px-0 py-0  ">
+                        <div class="col-sm-12 col-md-4 px-0 py-0  " >
                             <label for="bs_name" class="no-label"></label>
                             <input type="text" class="form-control no-border input_title" id="bs_name" placeholder="[ Business Name ]">
 
@@ -216,6 +216,7 @@
                         <label for="validationTextarea" class="text-center w-100 border-bottom">Notes / Terms</label>
                         <textarea rows="10" class="form-control no-border w-100 text-center" id="validationTextarea" placeholder="Notes / Terms" required></textarea>
                     </div>
+
                 </div>
             </div>
 
@@ -418,7 +419,6 @@
                     </div>
                 </div>
             </div>
-
             <!--        endmodal-->
         </div>
     </div>
