--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                     </div>
                     <div class="col-sm-12 row mx-auto py-5">
                         <label for="validationTextarea" class="text-center w-100 border-bottom">Notes / Terms</label>
-                        <textarea rows="10" class="form-control no-border w-100 text-center" id="validationTextarea" placeholder="Notes / Terms" required></textarea>
+                        <textarea rows="10" class="form-control no-border w-100 " id="validationTextarea" placeholder="Notes / Terms" required></textarea>
                     </div>
 
                 </div>
