--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
     <div class="col-sm-12">
         <div class="row py-4">
 
-            <div id="print_doc" class="col-sm-12 col-md-12 col-lg-8 col-lg-6 p-3 mx-auto bg-whitee receipt_wrapper">
-                <div class="row" style="padding: 0 14px;">
+            <div  class="col-sm-12 col-md-12 col-lg-8 col-lg-8 p-3 mx-auto bg-whitee receipt_wrapper">
+                <div id="print_doc" class="row" style="padding: 0 14px;">
 
                     <div class="col-sm-12 row mx-auto header_bottom_boder pb-4">
                         <div class="col-sm-12 col-md-4 pt-3">
